selene/tests/validate_config/invalid_std_yaml/rich_output.txt
error: failed to find standard library: std
  ┌─ selene.toml:1:1
  │
1 │ std = "std"
  │ ^^^^^^^^^^^

